# QTensor

./: .gitignore  .gitmodules  Dockerfile  Dockerfile-mkl  Dockerfile-tamaki  Dockerfile.dev  LICENSE  README.md  SupremacyTrimming.py  dev.sh  example_qaoa_energy_1.py  kahypar_test.py  qaoa_energy_only_qiskit.py  requirements.txt  second_try.nc  setup.cfg  setup.py  simpler_cut_compute.py  test-requirements.txt
.github/workflows/: docker-publish.yml  jlse.yaml  pyblish.yml  test.yml
analysis/: Diagonal and ZZ plots.ipynb  Energy efficiency calculations.ipynb  MaxCut upper bound.ipynb  Qiskit_vs_qtensor_maxcut_expectation.ipynb  Quimb qaoa ansatz contraction comparison.ipynb
analysis/ligthcone_orbits/: README.md  calc_orbits.py
analysis/qaoa_notebooks/: Tree subgraph.ipynb
analysis/qtensor-paper/: README.md
analysis/spec/: Makefile  Time_vs_FLOP.py  parameters_nu3.json  settings.ini  setup.py
bench/backup/: Makefile
bench/batchbench/: Makefile  bench
bench/benchback/: bench  timer.h
bench/cybench/: numpy_bench.c
bench/mklbench/: bench.cpp  cachegrind.out.14679  cachegrind.out.14991
bench/openblasbench/: Makefile  bench  t.txt  timer.h
bench/peobench/: convert_data_to_mongodb.py  peo_bench.py  peo_graphers.py  peo_p_d_dependency.py  readme.md
bench/pybench/: bench.py  einsum_bench.py  exatn_bench.py  numpy_bench.py  tn_bench.py
bench/qc_simulation/: README.md  main.py  requirements.txt
bench/qensorbench/: ordering_algo.py  supremacy_tw.md
bench/tensor/: Makefile  tensor_transpose_test.py
benchmark/: bench_diagonal.py  bench_tamaki_backend.py  convert_data_to_mongodb.py  curve.f90  makefile  peo_graphers.py  peo_p_d_dependency.py  peo_solvers.py  runc.sh  treewidth_dependency.py
benchmark/bad_peo_data/:  peo_tamaki_heuristic_heuristicRun1_maxNodes201_d1_p100_operators-diagonal_seed25.txt   peo_tamaki_heuristic_heuristicRun1_maxNodes201_d1_p10_operators-diagonal_seed25.txt  (+65 more)
benchmarks/: bench_numpy.py
data/: .gitignore  README.md
examples/: Basic usage.ipynb  Compare.ipynb  Noisy_QTensor_QAOA_Test.ipynb  QAOA cost mapping.ipynb  QAOA_circ.txt  QTensor usage.ipynb  Qtree Basic usage.ipynb  Stochastic_noise_usage.ipynb  Variational parameters optimization.ipynb  backend_usage_qaoa_ansatz.py  backend_usage_qaoa_energy.py  get_treewidth.py  qtensor-vertex-cover.ipynb  tamaki.py  tensor_network_usage.py
prof_res/: cupy_n20.prof  cupy_n24.prof  einsum_n20.prof  einsum_n24.prof  einsum_n8.prof  opt_einsum_n20.prof  opt_einsum_n24.prof  torch_cpu_n20.prof  torch_cpu_n24.prof  torch_gpu_n20.prof  torch_gpu_n24.prof  tr_einsum_n20.prof  tr_einsum_n24.prof
qaoa/: Analyse QAOA cost.ipynb  Analyse QAOA cost.py  Draw circ.ipynb  Graph parallelism.ipynb  Graph parallelism.py  Lightcone optimisation.ipynb  Node parallelism.ipynb  Node parallelism.py  Node_parallelism.py  Plot chopping costs.ipynb  README.md  cache_naive_peo.py  contract_data  costs_cache.json  get_contraction_width.py  get_contraction_width_qbb.py  memcached_qaoa_utils.py  peo_cache.json  qbb_for_degrees.py  test_parallel_qaoa_sim.py  utils_mproc.py
qensor/: CircuitComposer.py  FeynmanSimulator.py  OpFactory.py  ProcessingFrameworks.py  QAOASimulator.py  Simulate.py  __init__.py  cli.py  test_composers.py  test_optimizers.py  test_qaoa_energy.py  test_simulators.py  utils.py
qtensor/: Bitstring.py  CircuitComposer.py  CircuitComposer.py.orig  DebugFrameworks.py  FeynmanSimulator.py  GenIsing.py  MergedSimulator.py  OpFactory.py  ProcessingFrameworks.py  QAOASimulator.py  Simulate.py  TNAdapter.py  __init__.py  cli.py  exatn_framework.py  toolbox.py  utils.py
qtensor/compression/cuszp/cuSZp/: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
qtensor/compression/cuszp/cuSZp/cmake/: Installing.cmake
qtensor/compression/cuszp/cuSZp/examples/: CMakeLists.txt  cuSZp_cpu_f32_api.cpp  cuSZp_cpu_f64_api.cpp  cuSZp_gpu_f32_api.cpp  cuSZp_gpu_f64_api.cpp
qtensor/compression/cuszp/cuSZp/include/: cuSZp_entry_f32.h  cuSZp_entry_f64.h  cuSZp_f32.h  cuSZp_f64.h  cuSZp_timer.h  cuSZp_utility.h
qtensor/compression/cuszp/cuSZp/src/: cuSZp_entry_f32.cu  cuSZp_entry_f64.cu  cuSZp_f32.cu  cuSZp_f64.cu  cuSZp_timer.cu  cuSZp_utility.cu
qtree/: setup.py
qtree-files/: PKG-INFO  README.md  setup.cfg
scratchpad/: README.md  Storage.py  compare_quimb.py  contr_sheme.py  cuquantum_comparison.py  energy_qiskit_test.py  expr.py  expr_graph_json.py  expr_json.py  expr_optim.py  log_localhost_singatures  problem_graph_json.py  pytest.ini  qaoa_eng_vs_backends.py  qaoa_eng_vs_be_adv.py  qaoa_eng_vs_be_adv_nsys.py  qaoa_eng_vs_be_adv_sl.py  qaoa_eng_vs_be_adv_sl_bc.py  qaoa_qtensor_100_2.prof  qaoa_qtensor_twest_100_2.prof  qaoa_quimb.py  qaoa_quimb_1000_2.prof  quickbb  sequence_max.py  sycamore.py  utils_qaoa.py
src/: CircuitComposer.py  OpFactory.py  test_composers.py
(+1174 files in other folders)
